# commonlibrary_c_utils

./: AGENTS.md  README.md  README_zh.md  bundle.json
OpenFAST_c_utils/: README.md
base/: BUILD.gn
base/include/: ashmem.h  common_errors.h  common_mapped_file_errors.h  common_timer_errors.h  datetime_ex.h  directory_ex.h  errors.h  event.h  file_ex.h  flat_obj.h  io_event_handler.h  io_event_reactor.h  mapped_file.h  nocopyable.h  observer.h  parcel.h  pubdef.h  refbase.h  rwlock.h  safe_block_queue.h  safe_map.h  safe_queue.h  semaphore_ex.h  singleton.h  sorted_vector.h  string_ex.h  thread_ex.h  thread_pool.h  thread_safety_analysis_macros.h  timer.h  unique_fd.h
base/src/: ashmem.cpp  datetime_ex.cpp  directory_ex.cpp  event_demultiplexer.cpp  event_demultiplexer.h  event_handler.cpp  event_handler.h  event_reactor.cpp  event_reactor.h  file_ex.cpp  io_event_epoll.cpp  io_event_epoll.h  io_event_handler.cpp  io_event_reactor.cpp  mapped_file.cpp  parcel.cpp  refbase.cpp  rwlock.cpp  semaphore_ex.cpp  string_ex.cpp  thread_ex.cpp  thread_pool.cpp  timer.cpp  timer_event_handler.cpp  timer_event_handler.h  unicode_ex.cpp  utils_log.h
base/src/rust/: ashmem.rs  directory_ex.rs  file_ex.rs  lib.rs
base/test/: BUILD.gn
base/test/benchmarktest/: BUILD.gn  README.md  README_zh.md  benchmark_log.h
base/test/benchmarktest/ashemem_benchmark_test/: BUILD.gn  ashemem_benchmark_test.cpp
base/test/benchmarktest/datatime_benchmark_test/: BUILD.gn  datatime_benchmark_test.cpp
base/test/benchmarktest/directory_benchmark_test/: BUILD.gn  directory_benchmark_test.cpp
base/test/benchmarktest/event_benchmark_test/: BUILD.gn  event_benchmark_test.cpp
base/test/benchmarktest/file_benchmark_test/: BUILD.gn  file_benchmark_test.cpp
base/test/benchmarktest/mapped_benchmark_test/: BUILD.gn  mapped_benchmark_test.cpp
base/test/benchmarktest/observer_benchmark_test/: BUILD.gn  observer_benchmark_test.cpp
base/test/benchmarktest/parcel_benchmark_test/: BUILD.gn  parcel_benchmark_test.cpp
base/test/benchmarktest/refbase_benchmark_test/: BUILD.gn  refbase_benchmark_test.cpp
base/test/benchmarktest/rwlock_benchmark_test/: BUILD.gn  rwlock_benchmark_test.cpp
base/test/benchmarktest/safe_block_queue_benchmark_test/: BUILD.gn  safe_block_queue_benchmark_test.cpp
base/test/benchmarktest/safe_block_queue_tracking_benchmark_test/: BUILD.gn  safe_block_queue_tracking_benchmark_test.cpp
base/test/benchmarktest/safe_map_benchmark_test/: BUILD.gn  safe_map_benchmark_test.cpp
base/test/benchmarktest/safe_queue_benchmark_test/: BUILD.gn  safe_queue_benchmark_test.cpp
base/test/benchmarktest/singleton_benchmark_test/: BUILD.gn  singleton_benchmark_test.cpp
base/test/benchmarktest/sorted_vector_benchmark_test/: BUILD.gn  sorted_vector_benchmark_test.cpp
base/test/benchmarktest/string_benchmark_test/: BUILD.gn  string_benchmark_test.cpp
base/test/benchmarktest/thread_benchmark_test/: BUILD.gn  thread_benchmark_test.cpp
base/test/benchmarktest/thread_pool_benchmark_test/: BUILD.gn  thread_pool_benchmark_test.cpp
base/test/benchmarktest/timer_benchmark_test/: BUILD.gn  timer_benchmark_test.cpp
base/test/benchmarktest/unique_fd_benchmark_test/: BUILD.gn  unique_fd_benchmark_test.cpp
base/test/fuzztest/: BUILD.gn  fuzz_log.h
base/test/fuzztest/ashmem_fuzzer/: BUILD.gn  ashmem_fuzzer.cpp
base/test/fuzztest/directory_fuzzer/: BUILD.gn
base/test/fuzztest/parcel_fuzzer/: BUILD.gn  parcel_fuzzer.cpp
base/test/fuzztest/refbase_fuzzer/: BUILD.gn  refbase_fuzzer.cpp
base/test/fuzztest/string_fuzzer/: BUILD.gn
base/test/fuzztest/thread_fuzzer/: BUILD.gn  thread_fuzzer.cpp
base/test/fuzztest/timer_fuzzer/: BUILD.gn  timer_fuzzer.cpp
base/test/unittest/common/: BUILD.gn  utils_ashmem_test.cpp  utils_datetime_test.cpp  utils_directory_test.cpp  utils_event_test.cpp  utils_file_test.cpp  utils_mapped_file_test.cpp  utils_observer_test.cpp  utils_parcel_test.cpp  utils_refbase_test.cpp  utils_rwlock_test.cpp  utils_safe_block_queue_test.cpp  utils_safe_block_queue_tracking.cpp  utils_safe_map_test.cpp  utils_safe_queue_test.cpp  utils_singleton_test.cpp  utils_sorted_vector_test.cpp  utils_string_test.cpp  utils_thread_pool_test.cpp  utils_thread_safety_analysis_test.cpp  utils_thread_test.cpp  utils_timer_test.cpp  utils_unique_fd_test.cpp
base/test/unittest/rust/: BUILD.gn  rust_utils_directory_test.rs  rust_utils_file_test.rs  utils_rust_ashmem_test.rs  utils_rust_directory_test.rs
docs/en/: c-utils-guide.md  c_utils_thread_pool.md  c_utils_thread_safety.md  c_utils_timer.md
docs/zh-cn/: c-utils-guide-ashmem.md  c-utils-guide-datetime.md  c-utils-guide-directory.md  c-utils-guide-file.md  c-utils-guide-observer.md  c-utils-guide-parcel.md  c-utils-guide-refbase.md  c-utils-guide-rwlock.md  c-utils-guide-safeMap.md  c-utils-guide-safe_block_queue.md  c-utils-guide-safe_queue.md  c-utils-guide-semaphore.md  c-utils-guide-singleton.md  c-utils-guide-sortedVector.md  c-utils-guide-string.md  c-utils-guide-thread.md  c-utils-guide-uniquefd.md  c-utils-guide.md  c_utils_guide_event.md  c_utils_guide_mapped_file.md  c_utils_guide_rust_ashmem.md  c_utils_guide_rust_directory.md  c_utils_guide_rust_file.md  c_utils_thread_pool.md  c_utils_thread_safety.md  c_utils_timer.md
